tekton/github-listener-ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: github-listener-ingress 
  namespace: default 
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: / 
spec: 
  rules:
    - host: tekton-listener.local  
      http: 
        paths:
          - path: / 
            pathType: Prefix 
            backend: 
              service: 
                name: github-listener-svc 
                port: 
                  number: 80
